<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/text_register_email_verify_empty"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:text = ""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_register_email_verify_inst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_inst_email_verifing"
        app:layout_constraintBottom_toTopOf="@+id/text_register_email_verify_empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_register_email_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_register_email_verify_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_register_email_verify_resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_inst_email_verify_resend"

        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/text_register_email_verify_inst"
        app:layout_constraintTop_toBottomOf="@+id/text_register_email_verify_empty" />
</androidx.constraintlayout.widget.ConstraintLayout>