<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/register_id">

    <fragment
        android:id="@+id/register_id"
        android:name="com.example.KlickApp.auth.User.EmailFragment"
        android:label="@string/email_fragment_label"
        tools:layout="@layout/fragment_register_email">

        <action
            android:id="@+id/action_register_id_to_ver"
            app:destination="@id/register_img"/>

    </fragment>

    <!--
    <fragment
        android:id="@+id/register_id_ver"
        android:name="com.example.KlickApp.auth.User.EmailVerifyFragment"
        android:label="@string/email_verify_fragment_label"
        tools:layout="@layout/fragment_register_email_verify">

        <action
            android:id="@+id/action_register_ver_to_img"
            app:destination="@+id/register_img"/>
        <action
            android:id="@+id/action_register_ver_to_id"
            app:destination="@+id/register_id"/>
    </fragment>-->
    <fragment
        android:id="@+id/register_img"
        android:name="com.example.KlickApp.auth.User.ImageFragment"
        android:label="@string/img_fragment_label"
        tools:layout="@layout/fragment_register_img">

        <action
            android:id="@+id/action_register_img_to_name"
            app:destination="@id/register_name" />
    </fragment>
    <fragment
        android:id="@+id/register_name"
        android:name="com.example.KlickApp.auth.User.NameFragment"
        android:label="@string/name_fragment_label"
        tools:layout="@layout/fragment_register_name">

        <action
            android:id="@+id/action_register_name_to_img"
            app:destination="@id/register_img" />
    </fragment>
</navigation>