<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_login_inst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_ur_id_and_password"
        app:layout_constraintBottom_toTopOf="@+id/edit_pd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/text_login_inst"
        app:layout_constraintStart_toStartOf="@+id/text_login_inst"
        app:layout_constraintTop_toBottomOf="@+id/edit_pd" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        app:layout_constraintBottom_toTopOf="@+id/btn_create"
        app:layout_constraintEnd_toEndOf="@+id/text_login_inst"
        app:layout_constraintStart_toStartOf="@+id/text_login_inst"
        app:layout_constraintTop_toBottomOf="@+id/edit_pd" />

    <EditText
        android:id="@+id/edit_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="ID"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edit_pd"
        app:layout_constraintEnd_toEndOf="@+id/text_login_inst"
        app:layout_constraintStart_toStartOf="@+id/text_login_inst"
        app:layout_constraintTop_toBottomOf="@+id/text_login_inst" />

    <EditText
        android:id="@+id/edit_pd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/text_login_inst"
        app:layout_constraintStart_toStartOf="@+id/text_login_inst"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_user_to_seller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/user_to_seller_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>