<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:id="@+id/img_deal_store"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/confirm"
            android:id="@+id/text_deal_store"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>


    </LinearLayout>
    <View
        android:layout_width="10dp"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/test1"
            android:id="@+id/text_deal_discount"/>

            <!--
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:id="@+id/text_deal_cost_normal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="20dp"
                android:layout_height="match_parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:id="@+id/text_deal_cost_discount"/>



        </LinearLayout>-->

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/test1"
            android:id="@+id/text_deal_date"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/test3"
            android:id="@+id/text_deal_distance"/>

    </LinearLayout>

</LinearLayout>