<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/StorePageTheme">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_store_title"
        android:text="sdfaasdf"
        android:paddingLeft="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/image_store_thumb"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_store_rating"
                android:text="rating"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_store_number"
                android:text="number"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_store_time"
                android:text="time"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_store_click"
                android:text="click"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:insetTop="2dp"
                android:insetBottom="2dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/store_btn_liked"
                android:id="@+id/btn_store_like"
                android:textSize="8dp"
                android:padding="0dp"/>

            <Button
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:insetTop="2dp"
                android:insetBottom="2dp"
                android:text="@string/store_btn_share"
                android:id="@+id/btn_store_share"
                android:textSize="8dp"
                android:padding="0dp"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        </LinearLayout>



    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_store_location"
        android:text="@string/test1"
        android:padding="10dp"
        android:background="@drawable/layout_boundary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/layout_boundary"
        android:padding="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_margin="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_menu"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <Button
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:insetTop="1dp"
                android:insetBottom="1dp"
                android:text="@string/title_more"
                android:textSize="5dp"
                android:id="@+id/btn_store_menu_more"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/layout_store_menu">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <include layout="@layout/menu_item"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <include layout="@layout/menu_item"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <include layout="@layout/menu_item"/>

            </LinearLayout>


        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/layout_boundary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_seller_pick"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_seller_pick"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/layout_boundary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_Klick_pick"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_Klick_pick"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_review"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btn_store_review_more"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/title_more"
                android:layout_gravity="right"
                android:insetTop="1dp"
                android:textSize="5dp"
                android:insetBottom="1dp"/>

        </LinearLayout>

        <!--
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/view_store_review">

            <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:id="@+id/img_review"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/layout_review_user_info"
                    app:layout_constraintStart_toEndOf="@+id/img_review"
                    app:layout_constraintTop_toTopOf="parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_review_user_name"
                        android:text="id"/>

                    <View
                        android:layout_width="10dp"
                        android:layout_height="0dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_review_user_level"
                        android:text="lv3"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/layout_review_info"
                    app:layout_constraintStart_toEndOf="@id/img_review"
                    app:layout_constraintTop_toBottomOf="@+id/layout_review_user_info">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_review_date"
                        android:text="2020.1.5"/>
                    <View
                        android:layout_width="10dp"
                        android:layout_height="0dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_review_rating"
                        android:text="4.5/5"/>
                    <View
                        android:layout_width="10dp"
                        android:layout_height="0dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_review_cost"
                        android:text="3200\\"/>

                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/img_review"
                    app:layout_constraintTop_toBottomOf="@+id/layout_review_info"
                    android:id="@+id/text_review_contents"
                    android:text="ASDF"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/layout_review_comment"
                    android:orientation="vertical"
                    app:layout_constraintStart_toEndOf="@id/img_review"
                    app:layout_constraintTop_toBottomOf="@id/text_review_contents"/>



            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
        -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_store_review">
            <include
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                layout="@layout/review_item"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
